[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrom"
description = "Unofficial MyStrom API Client"
readme = "README.md"
authors = [{ name = "Rafael Urben", email = "github@rafaelurben.ch" }]
maintainers = [{ name = "Rafael Urben", email = "github@rafaelurben.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.12"
dependencies = [
    "requests>=2.34.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rafaelurben/python-mystrom"
GitHub = "https://github.com/rafaelurben/python-mystrom"
Issues = "https://github.com/rafaelurben/python-mystrom/issues"

[project.scripts]
pystrom = "pystrom.__main__:main"

[dependency-groups]
dev = [
    "black==26.5.1",
    "mypy==2.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.dynamic]
version = { file = ["_version.txt"] }

[tool.black]
line-length = 100
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'
