[metadata]
name = pystrom
version = file: _version.txt
description = Unoffizielle MyStrom-Steuerung
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.
url = https://github.com/rafaelurben/python-mystrom
bugtrack_url = https://github.com/rafaelurben/python-mystrom/issues
project_urls =
    GitHub = https://github.com/rafaelurben/python-mystrom
    Issues = https://github.com/rafaelurben/python-mystrom/issues

[options]
setup_requires =
    setuptools
install_requires =
    requests>=2.25.1
    rich>=9.10.0
    packaging>=20.8

python_requires = >= 3.8
include_package_data = true
packages = find:
